<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    style="@style/ScrollVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/w_170"
            android:layout_height="@dimen/w_170"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btFbFanpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_transparent_border"
            android:stateListAnimator="@null"
            android:text="@string/like_fb"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSendMailRequestBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_transparent_border"
            android:stateListAnimator="@null"
            android:text="@string/send_email_request_book"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/app_name"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSendMailSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_transparent_border"
            android:stateListAnimator="@null"
            android:text="@string/send_email_support"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_medium"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>